--- a/bio.html
+++ b/bio.html
@@ -72,7 +72,7 @@
             <img src="./images/pie.jpeg" class="img-fluid gallery-img" alt="Pie">
         </div>
         <div class="col-md-4">
-            <img src="./images/swayze.jpeg" class="img-fluid gallery-img" alt="Swayze">
+            <img src="./images/sens.jpeg" class="img-fluid gallery-img" alt="Swayze">
         </div>
     </div>
 </section>
